# nekketsu-soccer-league

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
libs/: CMakeLists.txt
project/: project.godot
project/assets/images/backgrounds/: bottom-wall.png.import  goal-bottom.png.import  goal-top.png.import  pitch-background.png.import  pitch-lines.png.import  pitch-pattern.png.import  side-wall.png.import  top-wall.png.import
project/assets/images/characters/: player-shadow.png.import  soccer-player.png.import
project/assets/images/palettes/: skin-colors-palette.png.import  teams-color-palette.png.import
project/assets/images/particles/: spark.png.import  white-circle.png.import
project/assets/images/props/: 1p.png.import  2p.png.import  ball-shadow.png.import  cpu.png.import  soccer-ball.png.import
project/assets/images/ui/: 1x1.png.import  goal.png.import  times-up.png.import
project/assets/images/ui/flags/: flag-argentina.png.import  flag-brazil.png.import  flag-england.png.import  flag-france.png.import  flag-germany.png.import  flag-hseparator.png.import  flag-italy.png.import  flag-placeholder.png.import  flag-selection.png.import  flag-spain.png.import  flag-usa.png.import  flag-vseparator.png.import
project/assets/images/ui/mainmenu/: 1-player-selected.png.import  1-player.png.import  2-players-selected.png.import  2-players.png.import  ball-selection.png.import  layout-p1.png.import  layout-p2.png.import  menu-background.png.import  menu-mask.png.import  options-selected.png.import  options.png.import  title.png.import
project/assets/images/ui/teamselection/: finals-label.png.import  quarters-label.png.import  select-team-label.png.import  semis-label.png.import  team-selection-background.png.import  tournament-qfs.png.import  tournament-screen.png.import  winner-label.png.import  worldcup-label.png.import
project/gdextension/: cpp-extension.gdextension  cpp-extension.gdextension.uid
project/gdextension/cpp-extension/: CMakeLists.txt
project/gdextension/cpp-extension/private/: register_types.cpp
project/gdextension/modules/: CMakeLists.txt
project/gdextension/modules/cpp-extension/: CMakeLists.txt
project/gdextension/modules/cpp-extension/private/: register_types.cpp
project/gdextension/modules/cpp-extension/private/utils/: input_system.cpp  state.cpp  state_machine.cpp
project/gdextension/modules/cpp-extension/public/cpp-extension/utils/: input_system.hpp  state.hpp  state_machine.hpp
